[package]
name = "dumplack"
version = "0.1.0"
authors = ["gtongy <32930281+gtongy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
envy = "0.4"
serde = "1.0.87"
serde_derive = "1.0.87"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
tokio = "0.2.20"
bytes = "0.5.4"
futures = "0.3.5"
slack-hook = "0.7"
url = "2"
log = "0.4"
chrono = "0.4"